@@ -3,7 +3,6 @@ aclocal.m4
 configure config.log config.cache config.guess config.status config.sub
 libtool ltconfig ltmain.sh
 autom4te.cache
-.psrc .inslog2 tca.map tca.log
-*.rpt
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
 update
 WindowMaker*.tar.gz
