@@ -1,5 +1,4 @@
 Makefile Makefile.in
 .libs
 test
-.psrc .inslog2 tca.map tca.log
-*.rpt
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
