@@ -1,3 +1,2 @@
 Makefile Makefile.in
-.psrc .inslog2 tca.map tca.log
-*.rpt
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
