@@ -1,8 +1,2 @@
-Makefile Makefile.in
-aclocal.m4
-configure config.log config.cache config.guess config.status config.sub
-libtool ltconfig ltmain.sh
-.psrc .inslog2 tca.map tca.log
-*.rpt
-update update-autoconf
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
 libwmfun*.tar.gz
