@@ -2,5 +2,4 @@ Makefile Makefile.in
 *.lo *.la
 stamp-h stamp-h.in config.h config.h.in
 .libs
-.psrc .inslog2 tca.map tca.log
-*.rpt
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
