@@ -2,5 +2,4 @@ Makefile Makefile.in
 config.h config.h.in wconfig.h stamp-h stamp-h1 stamp-h.in
 .libs
 wmaker
-.psrc .inslog2 tca.map tca.log
-*.rpt
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
