@@ -2,5 +2,4 @@ Makefile Makefile.in
 *.lo *.la
 view testgrad testdraw testrot get-wraster-flags
 .libs
-.psrc .inslog2 tca.map tca.log
-*.rpt
+.psrc .inslog2 tca.map tca.log pchdir *.rpt
