@@ -68,6 +68,8 @@ Changes since version 0.80.2:
 - Fixed bug with scrolling menus introduced by the xinerama patch.
 - Fixed bug that could cause SIGSEGV by accessing beyond the end of text in
   a WINGs textfield widget.
+- Fixed small memory leak in WINGs' font panel code.
+- Fixed memory leak in WINGs' file panel code.
 
 
 Changes since version 0.80.1:
